@@ -1,3 +1,8 @@
+2011-04-24  Jakub Jelinek  <jakub@redhat.com>
+
+	PR preprocessor/48740
+	* c-c++-common/raw-string-11.c: New test.
+
 2010-07-07  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR target/44844
